--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "bootstrap-sass": "^3.0.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
