--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
+LOG_CHANNEL=stack
+
 DB_HOST=localhost
 DB_DATABASE=homestead
 DB_USERNAME=homestead
