--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "php": ">=7.1.3",
+        "laravel/framework": "5.6.*",
+        "laravel/tinker": "~1.0",
+        "fideloper/proxy":"^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "^7.0",
         "filp/whoops": "~2.0"
     },
     "autoload": {
@@ -37,7 +38,7 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
-            "php artisan optimize"
+            
         ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
