--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "barryvdh/laravel-ide-helper": "^2.8"
     },
     "autoload": {
         "classmap": [
