--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
     "resolve-url-loader": "^3.1.0",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "postcss": "^8.1.14"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
