--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/css
 /public/fonts
 /public/mix-manifest.json
+/public/hot
 Homestead.yaml
 Homestead.json
 .env
@@ -11,3 +12,4 @@ Homestead.json
 .phpstorm.meta.php
 _ide_helper.php
 _ide_helper_models.php
+.phpunit.result.cache
