--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,9 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     }
 }
